Fixed spacing issue with tags

--- a/plugins/groups/wiki/wiki.css
+++ b/plugins/groups/wiki/wiki.css
@@ -107,7 +107,7 @@
 	.article-tags {
 		background: #F4F4F4; /* url("/components/com_wiki/assets/img/tag_orange.png") 0.5em 0.5em no-repeat;*/
 		margin: 0 0 1em 0;
-		padding: 0.5em;
+		padding: 0.5em 0.5em 0.5em 2em;
 	}
 	.com_groups .group_wiki .article-tags h3 {
 		display: none;
